--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,11 @@
 ---
-title: "Index"
-author: "Nakul Padalkar"
+title: "Geographic Analysis Group 2"
 ---
+
+
+# Introduction
+## History
+
+This is a Quarto website.
+
+To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
