drop missing values code update

--- a/geographic_analysis.ipynb
+++ b/geographic_analysis.ipynb
@@ -228,7 +228,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3672/3265774581.py:4: DtypeWarning: Columns (19,30) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_3501/3265774581.py:4: DtypeWarning: Columns (19,30) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"./data/lightcast_job_postings.csv\")\n"
      ]
     },
@@ -246,6 +246,62 @@
     "import pandas as pd\n",
     "df = pd.read_csv(\"./data/lightcast_job_postings.csv\")\n",
     "print(df.columns.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_drop = [\n",
+    "    \"ID\", \"URL\", \"ACTIVE_URLS\", \"DUPLICATES\", \"LAST_UPDATED_TIMESTAMP\",\n",
+    "    \"NAICS2\", \"NAICS3\", \"NAICS4\", \"NAICS5\", \"NAICS6\",\n",
+    "    \"SOC_2\", \"SOC_3\", \"SOC_5\"\n",
+    "]\n",
+    "df.drop(columns=columns_to_drop, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'missingno'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmissingno\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmsno\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Visualize missing data\u001b[39;00m\n\u001b[32m      4\u001b[39m msno.heatmap(df)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'missingno'"
+     ]
+    }
+   ],
+   "source": [
+    "import missingno as msno\n",
+    "\n",
+    "# Visualize missing data\n",
+    "msno.heatmap(df)\n",
+    "plt.title(\"Missing Values Heatmap\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Drop columns with >50% missing values\n",
+    "df.dropna(thresh=len(df) * 0.5, axis=1, inplace=True)\n",
+    "\n",
+    "# Fill missing values\n",
+    "df[\"Salary\"].fillna(df[\"Salary\"].median(), inplace=True)\n",
+    "df[\"Industry\"].fillna(\"Unknown\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates(subset=[\"TITLE\", \"COMPANY\", \"LOCATION\", \"POSTED\"], keep=\"first\")"
    ]
   }
  ],
