--- a/ADAM geographic_analysis copy.ipynb
+++ b/ADAM geographic_analysis copy.ipynb
@@ -15,13 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/06/19 17:40:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/06/19 17:40:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "                                                                                \r"
      ]
     },
@@ -169,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/06/19 17:33:54 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "25/06/19 17:40:21 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "                                                                                \r"
      ]
     },
@@ -221,14 +225,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2222/3265774581.py:4: DtypeWarning:\n",
+      "/tmp/ipykernel_2804/3265774581.py:4: DtypeWarning:\n",
       "\n",
       "Columns (19,30) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "\n"
@@ -252,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +399,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -445,12 +449,13 @@
     "plt.title('Tech Jobs by State (Job Title Contains \"Analyst\")')\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('figures/states_analyst_jobs.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -483,6 +488,10 @@
     "plt.title('Top 10 Cities - Tech Jobs (Job Title Contains \"Analyst\")')\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
+    "\n",
+    "# Save the figure to the figures folder\n",
+    "plt.savefig('figures/top_10_cities_analyst_jobs.png', dpi=300, bbox_inches='tight')\n",
+    "\n",
     "plt.show()"
    ]
   }
