--- a/market_trends.qmd
+++ b/market_trends.qmd
@@ -2,9 +2,9 @@
 title: Market Trends
 ---
 
-# Geographic Distribution of Analyst Jobs
+### Introduction
 
-This analysis shows the nationwide distribution of analyst jobs across all US states using an interactive choropleth map.
+Our group has decided to evaluate the distribution of jobs related to techonology across the United States. In order to do this, we used a count of any jobs containing the word "analyst" and categorized them by state. The results of this are shown below.
 
 <div style="text-align: center; font-size: 18px; font-weight: bold; margin: 20px 0;">
 Analyst Job Distribution Across the United States
@@ -54,7 +54,7 @@ fig = px.choropleth(
     locations='state_abbrev',
     color='job_count',
     locationmode='USA-states',
-    color_continuous_scale='Greens',
+    color_continuous_scale=[[0, '#f0f9f9'], [0.2, '#cceeee'], [0.4, '#7dd3c0'], [0.6, '#42b883'], [0.8, '#2c8577'], [1, '#1a5d56']],
     labels={'job_count': 'Number of Jobs', 'STATE_NAME': 'State'},
     hover_name='STATE_NAME',
     hover_data={'state_abbrev': False, 'job_count': True},
@@ -86,3 +86,5 @@ fig.update_layout(
 # Show the interactive map
 fig.show()
 ```
+
+According to the visual above, Texas and California are the two clear leaders in the total amount of jobs being offered that contain the word "analyst" in the title. Additionally, eastern states show a considerably greater amount of these jobs compared to western states.
