--- a/market_trends.qmd
+++ b/market_trends.qmd
@@ -18,13 +18,13 @@ import plotly.express as px
 import plotly.io as pio
 import plotly.graph_objects as go
 
-# Configure plotly for CI environments - try different renderer
-pio.renderers.default = "json"
+# Configure plotly for CI environments - use notebook renderer
+pio.renderers.default = "notebook"
 pio.templates.default = "plotly_white"
 
-# Disable browser opening in CI
-import os
-os.environ["PLOTLY_RENDERER"] = "json"
+# Additional configuration for Quarto
+import plotly.offline as pyo
+pyo.init_notebook_mode(connected=True)
 
 # Load the data
 df = pd.read_csv("./data/lightcast_job_postings.csv")
@@ -93,7 +93,7 @@ fig.update_layout(
 )
 
 # Show the interactive map
-fig.show()
+fig
 ```
 
 According to the visual above, Texas and California are the two clear leaders in the total amount of jobs being offered that contain the word "analyst" in the title. Additionally, eastern states show a considerably greater amount of these jobs compared to western states.
