--- a/market_trends.qmd
+++ b/market_trends.qmd
@@ -2,7 +2,7 @@
 title: Market Trends
 ---
 
-### Introduction ()
+### Introduction
 
 Our group has decided to evaluate the distribution of jobs related to techonology across the United States. In order to do this, we used a count of any jobs containing the word "analyst" and categorized them by state. The results of this are shown below.
 
