--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,32 @@
-Stryker, C. (2024, August 9). What is artificial intelligence (AI)? IBM. https://www.ibm.com/think/topics/artificial-intelligence
+@online{stryker2024ai,
+  author = {Stryker, C.},
+  title = {What is artificial intelligence (AI)?},
+  year = {2024},
+  month = aug,
+  day = 9,
+  url = {https://www.ibm.com/think/topics/artificial-intelligence},
+  organization = {IBM},
+  note = {Accessed: 2025-06-25}
+}
 
-Expert Panel. (2021, January 20). 14 tech experts predict which industries and sectors will benefit most from AI. Forbes. https://www.forbes.com/councils/forbestechcouncil/2021/01/20/14-tech-experts-predict-which-industries-and-sectors-will-benefit-most-from-ai/
+@online{expertpanel2021ai,
+  author = {Expert Panel},
+  title = {14 Tech Experts Predict Which Industries and Sectors Will Benefit Most from AI},
+  year = {2021},
+  month = jan,
+  day = 20,
+  url = {https://www.forbes.com/councils/forbestechcouncil/2021/01/20/14-tech-experts-predict-which-industries-and-sectors-will-benefit-most-from-ai/},
+  organization = {Forbes},
+  note = {Accessed: 2025-06-25}
+}
 
-Robinson, B. (2025, February 16). Artificial Intelligence Revolution: 10 U.S. states leading the pack. Forbes. https://www.forbes.com/sites/bryanrobinson/2025/02/16/artificial-intelligence-revolution-10-us-states-leading-the-pack/
+@online{robinson2025ai,
+  author = {Robinson, B.},
+  title = {Artificial Intelligence Revolution: 10 U.S. States Leading the Pack},
+  year = {2025},
+  month = feb,
+  day = 16,
+  url = {https://www.forbes.com/sites/bryanrobinson/2025/02/16/artificial-intelligence-revolution-10-us-states-leading-the-pack/},
+  organization = {Forbes},
+  note = {Accessed: 2025-06-25}
+}
