--- a/references.bib
+++ b/references.bib
@@ -30,3 +30,35 @@
   organization = {Forbes},
   note = {Accessed: 2025-06-25}
 }
+
+@article{lee2024redefining,
+  author = {Lee, J. J. and Samanta, A. and Lee, M.},
+  title = {Redefining careers in the age of artificial intelligence},
+  journal = {Issues in Information Systems},
+  year = {2024},
+  volume = {25},
+  number = {3},
+  pages = {428--438},
+  doi = {10.48009/3_iis_2024_132}
+}
+
+@online{ito2025ai,
+  author = {Ito, A.},
+  title = {New data confirms it: AI is taking human jobs},
+  year = {2025},
+  month = jun,
+  url = {https://www.businessinsider.com/ai-hiring-white-collar-recession-jobs-tech-new-data-2025-6},
+  organization = {Business Insider},
+  note = {Accessed: 2025-06-25}
+}
+
+@article{mcelheran2024ai,
+  author = {McElheran, K. and Li, J. F. and Brynjolfsson, E. and Kroff, Z. and Dinlersoz, E. and Foster, L. and Zolas, N.},
+  title = {AI adoption in America: Who, what, and where},
+  journal = {Journal of Economics \& Management Strategy},
+  year = {2024},
+  volume = {33},
+  number = {2},
+  pages = {375--415},
+  doi = {10.1111/jems.12576}
+}
