added reference to the end

--- a/index.qmd
+++ b/index.qmd
@@ -24,5 +24,5 @@ From a geographic perspective, McElheran et al. @mcelheran2024ai offers importan
 ## Purpose
 With this in mind, our research will look at the rising trends within the job market, with a particular focus on roles that align with our own career interests. This includes analyst positions, some of which may be influenced by advances in AI. We will also look at what working conditions, more specifically remote versus not remote jobs.
 
-## History
+## References
 
