--- a/skill_gap.qmd
+++ b/skill_gap.qmd
@@ -11,6 +11,7 @@ exeucte:
     freeze: auto
 ---
 ```{python}
+results: 'hide'
 
 import findspark
 findspark.init()
@@ -44,6 +45,7 @@ df.createOrReplaceTempView("jobs")
 ```
 
 ```{python}
+results: 'hide'
 software_skill_counts_by_type = spark.sql("""
     SELECT software_skills_name, COUNT(*) AS count
     FROM jobs
@@ -58,6 +60,7 @@ software_skill_counts_by_type.show(truncate=False)
 ```
 
 ```{python}
+results: 'hide'
 skill_counts_by_type = spark.sql("""
     SELECT skills_name, COUNT(*) AS count
     FROM jobs
@@ -72,6 +75,7 @@ skill_counts_by_type.show(truncate=False)
 ```
 
 ```{python}
+results: 'hide'
 import pandas as pd
 
 skills_data = {
@@ -135,7 +139,8 @@ fig.update_layout(
     title="Team Skillset Levels"
 )
 
-fig.show()
+
+fig.write_html("./figures/skill_gap.html", include_plotlyjs='cdn')
 
 #https://plotly.com/python/radar-chart/
 ```
