--- a/skill_gap.qmd
+++ b/skill_gap.qmd
@@ -2,16 +2,17 @@
 title: Skill Gap Analysis
 format:
     html:
-        code-fold: true
         toc: true
         toc-depth: 2
-exeucte:
-    eval: false
-    echo: true
-    freeze: auto
+execute:
+  echo: false   
+  warning: false  
+  message: false   
+  eval: false
 ---
 ```{python}
-results: 'hide'
+#| results: 'hide'
+#| echo: false
 
 import findspark
 findspark.init()
@@ -32,20 +33,19 @@ spark = SparkSession.builder.appName("LightcastData").getOrCreate()
 # Load Data
 df = spark.read.option("header", "true").option("inferSchema", "true").option("multiLine","true").option("escape", "\"").csv("./data/lightcast_job_postings.csv")
 
-# Show Schema and Sample Data
-print("---This is Diagnostic check, No need to print it in the final doc---")
 
-df.printSchema() # comment this line when rendering the submission
-df.show(5)
+
 ```
 
 ```{python}
+#| echo: false
 
 df.createOrReplaceTempView("jobs")
 ```
 
 ```{python}
-results: 'hide'
+#| results: 'hide'
+#| echo: false
 software_skill_counts_by_type = spark.sql("""
     SELECT software_skills_name, COUNT(*) AS count
     FROM jobs
@@ -60,7 +60,8 @@ software_skill_counts_by_type.show(truncate=False)
 ```
 
 ```{python}
-results: 'hide'
+#| results: 'hide'
+#| echo: false
 skill_counts_by_type = spark.sql("""
     SELECT skills_name, COUNT(*) AS count
     FROM jobs
@@ -75,7 +76,8 @@ skill_counts_by_type.show(truncate=False)
 ```
 
 ```{python}
-results: 'hide'
+#| results: 'hide'
+#| echo: false
 import pandas as pd
 
 skills_data = {
@@ -92,7 +94,14 @@ df_skills.set_index("Name", inplace=True)
 df_skills
 ```
 
+
 ```{python}
+#| eval: false
+#| echo: false
+#| warning: false
+#| fig-cap: "Analyst Job Distribution Across the United States"
+#| fig-align: center
+#| label: fig-analyst-distribution
 
 import pandas as pd
 import plotly.graph_objects as go
@@ -138,6 +147,7 @@ fig.update_layout(
     showlegend=True,
     title="Team Skillset Levels"
 )
+fig.show()
 
 
 fig.write_html("./figures/skill_gap.html", include_plotlyjs='cdn')
@@ -145,3 +155,7 @@ fig.write_html("./figures/skill_gap.html", include_plotlyjs='cdn')
 #https://plotly.com/python/radar-chart/
 ```
 
+```{=html}
+<iframe width="1000" height="700" src="./figures/skill_gap.html" title="Market Comparison"></iframe>
+```
+## Recomendations
